--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <li>занимаюсь спортом</li>
         <li>увлекаюсь программированием и вёрсткой сайтов</li>
       </ul>
-      <img src="https://media.75.ru/xn--90anlffn/resources/129116/.jpg" width="417px" height="360px"/>
-      <img src="https://png.pngtree.com/png-vector/20190604/ourmid/pngtree-personal-computer-vector-design-png-image_1263156.jpg" width="417px" height="360px"/>
+      <img src="https://kartinki.pics/uploads/posts/2022-02/thumbs/1645235988_3-kartinkin-net-p-programmist-kartinki-3.jpg" width="800px" height="400px"/>
+      <img src="https://png.pngtree.com/png-vector/20190604/ourmid/pngtree-personal-computer-vector-design-png-image_1263156.jpg" width="800px" height="400px"/>
     </main>
     <footer>
       <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
