--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
     </header>
     <main>
       <h1>Толстенко Максим</h1>
-      <ul>
-        <li>люблю играть в игры</li>
-        <li>люблю футбол</li>
-        <li>занимаюсь спортом</li>
-        <li>увлекаюсь программированием и вёрсткой сайтов</li>
-      </ul>
+      <div>
+        <ul>
+          <li>люблю играть в игры</li>
+          <li>люблю футбол</li>
+          <li>занимаюсь спортом</li>
+          <li>увлекаюсь программированием и вёрсткой сайтов</li>
+        </ul>
+      </div>
       <img src="https://kartinki.pics/uploads/posts/2022-02/thumbs/1645235988_3-kartinkin-net-p-programmist-kartinki-3.jpg" width="800px" height="400px"/>
       <img src="https://png.pngtree.com/png-vector/20190604/ourmid/pngtree-personal-computer-vector-design-png-image_1263156.jpg" width="800px" height="400px"/>
     </main>
