--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <img src="https://png.pngtree.com/png-vector/20190604/ourmid/pngtree-personal-computer-vector-design-png-image_1263156.jpg" width="800px" height="400px"/>
     </main>
     <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
+      <a class="social" href=""><img src="https://mars.algoritmika.org/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
       <a class="social" href=""><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQQtpHFFaMw_0RtE4I7PodWeMdgMhXcZgnYw&s" width="100px" height="100px"/></a>
       <a class="social" href=""><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" width="100px" height="100px"/></a>
     </footer>
